stylesheet.css
html {
	font-family: Arial, Helvetica, sans-serif;
    display: flex;
    justify-content: center;
	background-color: #e8e8e8;
}

body {
    width: 85vw;
    height: 95vh;
    /*border: 1px solid red;*/
    position: fixed;
}

header {
	padding-top: 15px;
	padding-bottom: 15px;
    position: absolute;
    top: 0;
    height: 7vh;
    width: 85vw;
}

#main_nav {
	display: flex;
	justify-content: center;
	align-items: center;
}

.main_nav_btns {
	box-shadow: 0px 5px 7px #C0C0C0;
	transition: .2s;
	display: flex;	
	justify-content: center;
	align-items: center;
	height: 55px;
	width: 55px;
	background-color: #D3D3D3;
	border: 0;
	border-radius: 50px;
	margin: 5px;
}

@media (hover) {
	.main_nav_btns:hover {
		transition: .2s;
		height: 65px;
		width: 65px;
		background-color: #DCDCDC;
	}
}

.main_nav_btns_clicked {
	pointer-events: none;
	height: 65px;
	width: 65px;
	border: 0;
	background-color: rgb(255, 60, 60);
	border-radius: 50px;
	margin: 5px;
}

#home_btn {
	animation: fadeInHigher .3s ease-out both;
}

#about_btn {
	animation: fadeInHigher .3s ease-out both;
	animation-delay: .1s;
}

#edu_btn {
	animation: fadeInHigher .3s ease-out both;
	animation-delay: .2s;
}

#work_hist_btn {
	animation: fadeInHigher .3s ease-out both;
	animation-delay: .3s;
}

#projects_btn {
	animation: fadeInHigher .3s ease-out both;
	animation-delay: .4s;
}

.icons {
	height: 60%;
	width: 60%;
}

#about_icon {
	height: 45%;
}

#edu_icon {
	height: 45%;
}

#work_hist_icon {
	transform: translate(0px, -1px);
}

#content_area {
	display: flex;
	justify-content: center;
	align-items: center;
	position: absolute;
	top: 10%;
	/*border: 1px solid black;*/
	height: 90%;
	width: 100%;
}

#home_section {
	display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	justify-content: center;
	align-items: center;
	height: 500px;
	width: 800px;
}

.sections {
	border: 1px solid black;
	display: flex;
	flex-direction: column;
	flex-wrap: nowrap;
	justify-content: center;
	align-items: center;
	height: 500px;
	width: 1000px;
}

.headers {
	position: absolute;
	display: flex;
	justify-content: center;
	align-items: center;
 	width: 75%;
	border: 1px solid black;
  	text-shadow: 0px 5px 5px #C0C0C0;
	font-size: 60px;
	font-weight: lighter;
	animation: fadeIn .3s ease-out both;
}

@media screen and (min-width: 501px) {
	#portrait {
		box-shadow: 0px 10px 10px #C0C0C0;
		border: 1px solid black;
		border-radius: 20px;
		width: 100%;
		margin-right: 30px;
	}
	#home_name {
		transform: translate(0px, -15px);
  		text-shadow: 0px 5px 7px #C0C0C0;
		text-align: right;
		font-size: 60px;
		font-weight: lighter;
		animation: fadeInLeft .3s ease-out both;
	}
	#home_short_desc {
		transform: translate(0px, -20px);
		font-size: 22px;
		text-align: right;
		font-weight: lighter;
		animation: fadeInLeft .3s ease-out both;
	}
}

@media screen and (max-width: 500px) {
	#portrait {
		box-shadow: 0px 10px 10px #C0C0C0;
		border: 1px solid black;
		border-radius: 20px;
		width: 100%;
		margin-right: 0px;
	}
	#home_name {
		text-shadow: 0px 5px 7px #C0C0C0;
		font-size: 54px;
		text-align: center;
		font-weight: lighter;
		animation: fadeInBottom .3s ease-out both;
	}
	#home_short_desc {
		display: none;
		animation: fadeInBottom .3s ease-out both;
	}
	#home_section {
		flex-wrap: wrap;
	}
}

@keyframes fadeIn {
   0% {
      opacity: 0;
      transform: translateY(-20px);
   }
   100% {
      opacity: 1;
      transform: translateY(0);
   }
} 

@keyframes fadeInHigher {
   0% {
      opacity: 0;
      transform: translateY(-50px);
   }
   100% {
      opacity: 1;
      transform: translateY(0);
   }
} 

@keyframes fadeInBottom {
   0% {
      opacity: 0;
      transform: translateY(20px);
   }
   100% {
      opacity: 1;
      transform: translateY(0);
   }
} 

@keyframes fadeInLeft {
   0% {
      opacity: 0;
      transform: translateX(20px);
   }
   100% {
      opacity: 1;
      transform: translateX(0);
   }
}

